// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyCarSpacesFilterViewMapControl renders correctly when collapsed 1`] = `
<div class="layer-container">
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Query listings with current number of car spaces">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <div class="layer-options">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyCarSpacesFilterViewMapControl renders correctly when expanded 1`] = `
<div class="layer-container">
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Query listings with current number of car spaces">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <div class="layer-options expanded">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
